<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Cover image-->
            <ImageView
                android:id="@+id/coverIv"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitXY">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="100dp">

                <ImageView
                    android:id="@+id/avatarTv"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_default_image"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#77000000">

                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Name3"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="25sp"
                        />

                    <TextView
                        android:id="@+id/emailTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Email3"
                        android:layout_marginStart="5dp"
                        />

                    <TextView
                        android:id="@+id/phoneTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Phone3"
                        android:layout_marginStart="5dp"
                        />

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

    <!-- Floating Action Button-->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/Fab"
        android:src="@drawable/ic_edit_white1"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_alignParentBottom = "true"
        android:layout_alignParentEnd = "true"
        android:layout_alignParentRight = "true"
        android:layout_margin = "10dp" />

</RelativeLayout>